# EPTDAC

./: CMakeLists.txt  README.md
include/: customimagewidget.h  imagefusion.h  mainwindow.h  qualitymetrics.h
src/: customimagewidget.cpp  imagefusion.cpp  main.cpp  mainwindow.cpp  qualitymetrics.cpp
